fix: make docker host configuration read-only
